testing/tests/ui/excessive_nesting.stderr
error: the previous template error derives from
 --> tests/ui/excessive_nesting.rs:5:5
  |
5 |     source = "
  |     ^^^^^^
